--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.3.0",
         "@popperjs/core": "^2.11.6",
-        "bootstrap": "^5.2.3"
+        "bootstrap": "^5.2.3",
+        "swiper": "^9.1.0"
     }
 }
