--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.13",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
+        "rollup-plugin-terser": "^7.0.2",
         "sass": "^1.58.2",
         "vite": "^4.0.0"
     },
