--- a/.envProd
+++ b/.envProd
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=aggregator
-DB_USERNAME=root
-DB_PASSWORD=rootroot
+DB_DATABASE=ce22359_agg
+DB_USERNAME=ce22359_agg
+DB_PASSWORD=hH8yH87OIl
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
