--- a/.editorconfig
+++ b/.editorconfig
@@ -14,6 +14,15 @@ indent_size = 4
 [*.blade.php]
 indent_size = 4
 
+[*.js]
+indent_size = 2
+
+[*.scss]
+indent_size = 2
+
+[*.css]
+indent_size = 2
+
 [*.md]
 trim_trailing_whitespace = false
 
