--- a/.gitignore
+++ b/.gitignore
@@ -78,5 +78,6 @@ Temporary Items
 .history
 .ionide
 
+.jshintrc
 # End of https://www.toptal.com/developers/gitignore/api/macos,visualstudiocode,laravel
 
