--- a/.gitignore
+++ b/.gitignore
@@ -100,5 +100,6 @@ tags
 [._]*.un~
 
 .jshintrc
+**/log.txt
 # End of https://www.toptal.com/developers/gitignore/api/macos,visualstudiocode,laravel
 
