--- a/.gitignore
+++ b/.gitignore
@@ -101,5 +101,8 @@ tags
 
 .jshintrc
 **/log.txt
+data/
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,visualstudiocode,laravel
+
 
