--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "laravel/framework": "^9.19",
     "laravel/sanctum": "^3.0",
     "laravel/tinker": "^2.7",
+    "orchid/platform": "^13.10",
     "phpoffice/phpspreadsheet": "^1.28"
   },
   "require-dev": {
