--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "laravel/framework": "^10.0",
     "laravel/sanctum": "^3.0",
     "laravel/tinker": "^2.7",
+    "orchid/icons": "^2.2",
     "orchid/platform": "^14.0",
     "phpoffice/phpspreadsheet": "^1.28"
   },
